--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -64,7 +64,7 @@ jobs:
     ##下载kenzok8/openwrt-packages的源代码 和 passwall依赖库kenzok8/small.git。
     - name: Clone openwrt-packages code
       run: |
- ##       cd lede/package &&  git clone https://github.com/kenzok8/openwrt-packages.git
+          #cd lede/package &&  git clone https://github.com/kenzok8/openwrt-packages.git
           echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default 
           cd package
           mkdir openwrt-packages
