--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -76,6 +76,7 @@ jobs:
           cd oscam
           git clone https://github.com/zzq12345/luci-app-oscam.git        
           cd ..
+          mkdir package
           cd package
           git clone https://github.com/kob/OpenWrt-Packages-DVB.git
           cd .. 
