--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -84,7 +84,7 @@ jobs:
         
     - name: Clone small code
       run: |
-  ##      cd lede/package &&  git clone https://github.com/kenzok8/small.git
+      #cd lede/package &&  git clone https://github.com/kenzok8/small.git
         
 ##****************************************************************************     
       
