--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -10,9 +10,9 @@ name: Build X86-64-20210528
 on: 
   release:
     types: [published]
-#  push:
-#    branches: 
-#      - master
+  push:
+    branches: 
+     - master
   watch:
     types: [started]
 
