--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -58,8 +58,8 @@ jobs:
         git clone https://github.com/coolsnowwolf/lede lede
         
         ##修改lede目录中的feeds.conf.default文件，把第5行的 # 去掉。
-        #cd lede
-        #sed -i '5s/#//' feeds.conf.default
+        cd lede
+        sed -i '5s/#//' feeds.conf.default
 ##***************************************************************************  
     ##下载kenzok8/openwrt-packages的源代码 和 passwall依赖库kenzok8/small.git。
     - name: Clone openwrt-packages code
