--- a/x64.config
+++ b/x64.config
@@ -71,6 +71,8 @@ CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_icu=y
 CONFIG_PACKAGE_icu-full-data=y
 CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
