--- a/x64.config
+++ b/x64.config
@@ -110,6 +110,48 @@ CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-cake-virtual=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
+# IPv6
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_ipv6helper=y
+# USB support
+CONFIG_PACKAGE_ccid=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
+CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb2-pci=y
+CONFIG_PACKAGE_kmod-usbmon=y
+CONFIG_PACKAGE_libopensc=y
+CONFIG_PACKAGE_libpcsclite=y
+CONFIG_PACKAGE_libusb-1.0=y          
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_kmod-usbmon=y
+CONFIG_PACKAGE_pcsc-tools=y
+CONFIG_PACKAGE_pcscd=y
+CONFIG_PACKAGE_uuid=y
+CONFIG_PACKAGE_libopensc=y
+CONFIG_PACKAGE_opensc-utils
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libusb-1.0=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-ch341=y
+CONFIG_PACKAGE_kmod-usb-serial-ftdi =y
+CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
+CONFIG_PACKAGE_libpcsclite=y
+CONFIG_PACKAGE_pcscd=y
+CONFIG_PACKAGE_ccid=y
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb3=n
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_usbreset=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_opensc-utils=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
