--- a/x64.config
+++ b/x64.config
@@ -47,6 +47,7 @@ CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
 CONFIG_OPENVPN_openssl_ENABLE_PF=y
 CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_amule=y
 CONFIG_PACKAGE_attr=y
@@ -67,15 +68,16 @@ CONFIG_PACKAGE_dkjson=y
 CONFIG_PACKAGE_dnscrypt-proxy=y
 CONFIG_PACKAGE_dnscrypt-proxy-resolvers=y
 CONFIG_PACKAGE_dnsforwarder=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_icu=y
 CONFIG_PACKAGE_icu-full-data=y
+CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_kcptun-client=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-crypto-ccm=y
@@ -95,63 +97,26 @@ CONFIG_PACKAGE_kmod-fast-classifier=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_kmod-fs-ksmbd=y
+CONFIG_PACKAGE_kmod-i2c-mux=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-lib-lzo=y
 CONFIG_PACKAGE_kmod-lib-raid6=y
 CONFIG_PACKAGE_kmod-lib-xor=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-cake-virtual=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
-# IPv6
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_ipv6helper=y
-# USB support
-CONFIG_PACKAGE_ccid=y
-CONFIG_PACKAGE_kmod-usb-ehci=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
-CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
-CONFIG_PACKAGE_kmod-usb-uhci=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb2-pci=y
-CONFIG_PACKAGE_kmod-usbmon=y
-CONFIG_PACKAGE_libopensc=y
-CONFIG_PACKAGE_libpcsclite=y
-CONFIG_PACKAGE_libusb-1.0=y          
-CONFIG_PACKAGE_kmod-usb-uhci=y
-CONFIG_PACKAGE_kmod-usbmon=y
-CONFIG_PACKAGE_pcsc-tools=y
-CONFIG_PACKAGE_pcscd=y
-CONFIG_PACKAGE_uuid=y
-CONFIG_PACKAGE_libopensc=y
-CONFIG_PACKAGE_opensc-utils
-CONFIG_PACKAGE_libopenssl=y
-CONFIG_PACKAGE_libusb-1.0=y
-CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-ch341=y
-CONFIG_PACKAGE_kmod-usb-serial-ftdi =y
-CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
-CONFIG_PACKAGE_libpcsclite=y
-CONFIG_PACKAGE_pcscd=y
-CONFIG_PACKAGE_ccid=y
-CONFIG_PACKAGE_kmod-usb-core=y
-CONFIG_PACKAGE_kmod-usb3=n
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-usb-storage-extras=y
-CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_usbreset=y
-CONFIG_PACKAGE_usbutils=y
-CONFIG_PACKAGE_opensc-utils=y
+CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
@@ -237,6 +202,7 @@ CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-meshwizard=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
 # CONFIG_PACKAGE_luci-app-samba is not set
@@ -261,7 +227,29 @@ CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-wifischedule=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
+CONFIG_PACKAGE_luci-i18n-amule-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-cifsd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dnsforwarder-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kodexplorer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-meshwizard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-sfe-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-v2ray-server-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-verysync-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=y
 CONFIG_PACKAGE_luci-lib-httpprotoutils=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-netgear=y
 CONFIG_PACKAGE_meshwizard=y
@@ -273,10 +261,15 @@ CONFIG_PACKAGE_nginx-ssl=y
 CONFIG_PACKAGE_nginx-ssl-util=y
 CONFIG_PACKAGE_nginx-util=y
 CONFIG_PACKAGE_nspr=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_oniguruma=y
 CONFIG_PACKAGE_opensc-utils=y
 CONFIG_PACKAGE_openvpn-easy-rsa=y
 CONFIG_PACKAGE_openvpn-openssl=y
+CONFIG_PACKAGE_oscam=y
 CONFIG_PACKAGE_p910nd=y
 CONFIG_PACKAGE_parted=y
 CONFIG_PACKAGE_pcsc-tools=y
@@ -337,6 +330,7 @@ CONFIG_PACKAGE_php7-pecl-mcrypt=y
 CONFIG_PACKAGE_php7-pecl-propro=y
 CONFIG_PACKAGE_php7-pecl-raphf=y
 CONFIG_PACKAGE_php7-pecl-redis=y
+# CONFIG_PACKAGE_ppp-mod-pppoe is not set
 CONFIG_PACKAGE_redsocks2=y
 # CONFIG_PACKAGE_samba36-server is not set
 CONFIG_PACKAGE_samba4-libs=y
@@ -351,7 +345,6 @@ CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_tvheadend=y
-CONFIG_PACKAGE_oscam=y
 CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_udpxy=y
 CONFIG_PACKAGE_unzip=y
@@ -394,11 +387,14 @@ CONFIG_PACKAGE_kmod-ipsec=y
 CONFIG_PACKAGE_kmod-ipsec4=y
 CONFIG_PACKAGE_kmod-ipsec6=y
 CONFIG_PACKAGE_kmod-ipt-ipsec=y
-CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-iptunnel6=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-pppoe=y
+CONFIG_PACKAGE_kmod-pppox=y
 # CONFIG_PACKAGE_kmod-xfrm-interface is not set
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libnatpmp=y
+CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_strongswan=y
 CONFIG_PACKAGE_strongswan-charon=y
 # CONFIG_PACKAGE_strongswan-charon-cmd is not set
