--- a/x64.config
+++ b/x64.config
@@ -183,196 +183,7 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libwxbase=y
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libzip-gnutls=y
-CONFIG_PACKAGE_lua-bencode=y
-CONFIG_PACKAGE_lua-sha2=y
-CONFIG_PACKAGE_luasocket=y
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-aliddns=y
-CONFIG_PACKAGE_luci-app-amule=y
-CONFIG_PACKAGE_luci-app-baidupcs-web=y
-CONFIG_PACKAGE_luci-app-cifs-mount=y
-CONFIG_PACKAGE_luci-app-cifsd=y
-CONFIG_PACKAGE_luci-app-cjdns=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y
-CONFIG_PACKAGE_luci-app-dnsforwarder=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-CONFIG_PACKAGE_luci-app-kodexplorer=y
-CONFIG_PACKAGE_luci-app-meshwizard=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set
-CONFIG_PACKAGE_luci-app-openvpn=y
-CONFIG_PACKAGE_luci-app-openvpn-server=y
-# CONFIG_PACKAGE_luci-app-samba is not set
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-sfe=y
-CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_Plugin=y
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-udpxy=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-v2ray-server=y
-CONFIG_PACKAGE_luci-app-verysync=y
-CONFIG_PACKAGE_luci-app-watchcat=y
-CONFIG_PACKAGE_luci-app-wifischedule=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
-CONFIG_PACKAGE_luci-i18n-amule-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-cifsd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-dnsforwarder-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-kodexplorer-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-meshwizard-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-mwan3helper-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-sfe-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-v2ray-server-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-verysync-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=y
-CONFIG_PACKAGE_luci-lib-httpprotoutils=y
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-theme-material=y
-CONFIG_PACKAGE_luci-theme-netgear=y
-CONFIG_PACKAGE_meshwizard=y
-CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_mwan3=y
-CONFIG_PACKAGE_naiveproxy=y
-CONFIG_PACKAGE_nginx=y
-CONFIG_PACKAGE_nginx-ssl=y
-CONFIG_PACKAGE_nginx-ssl-util=y
-CONFIG_PACKAGE_nginx-util=y
-CONFIG_PACKAGE_nspr=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
-CONFIG_PACKAGE_oniguruma=y
-CONFIG_PACKAGE_opensc-utils=y
-CONFIG_PACKAGE_openvpn-easy-rsa=y
-CONFIG_PACKAGE_openvpn-openssl=y
-CONFIG_PACKAGE_oscam=y
-CONFIG_PACKAGE_p910nd=y
-CONFIG_PACKAGE_parted=y
-CONFIG_PACKAGE_pcsc-tools=y
-CONFIG_PACKAGE_pcscd=y
-CONFIG_PACKAGE_php7=y
-CONFIG_PACKAGE_php7-cgi=y
-CONFIG_PACKAGE_php7-cli=y
-CONFIG_PACKAGE_php7-fastcgi=y
-CONFIG_PACKAGE_php7-fpm=y
-CONFIG_PACKAGE_php7-mod-bcmath=y
-CONFIG_PACKAGE_php7-mod-calendar=y
-CONFIG_PACKAGE_php7-mod-ctype=y
-CONFIG_PACKAGE_php7-mod-curl=y
-CONFIG_PACKAGE_php7-mod-dom=y
-CONFIG_PACKAGE_php7-mod-exif=y
-CONFIG_PACKAGE_php7-mod-fileinfo=y
-CONFIG_PACKAGE_php7-mod-filter=y
-CONFIG_PACKAGE_php7-mod-ftp=y
-CONFIG_PACKAGE_php7-mod-gd=y
-CONFIG_PACKAGE_php7-mod-gettext=y
-CONFIG_PACKAGE_php7-mod-gmp=y
-CONFIG_PACKAGE_php7-mod-iconv=y
-CONFIG_PACKAGE_php7-mod-intl=y
-CONFIG_PACKAGE_php7-mod-json=y
-CONFIG_PACKAGE_php7-mod-ldap=y
-CONFIG_PACKAGE_php7-mod-mbstring=y
-CONFIG_PACKAGE_php7-mod-mysqli=y
-CONFIG_PACKAGE_php7-mod-mysqlnd=y
-CONFIG_PACKAGE_php7-mod-opcache=y
-CONFIG_PACKAGE_php7-mod-openssl=y
-CONFIG_PACKAGE_php7-mod-pcntl=y
-CONFIG_PACKAGE_php7-mod-pdo=y
-CONFIG_PACKAGE_php7-mod-pdo-mysql=y
-CONFIG_PACKAGE_php7-mod-pdo-pgsql=y
-CONFIG_PACKAGE_php7-mod-pdo-sqlite=y
-CONFIG_PACKAGE_php7-mod-pgsql=y
-CONFIG_PACKAGE_php7-mod-phar=y
-CONFIG_PACKAGE_php7-mod-session=y
-CONFIG_PACKAGE_php7-mod-shmop=y
-CONFIG_PACKAGE_php7-mod-simplexml=y
-CONFIG_PACKAGE_php7-mod-snmp=y
-CONFIG_PACKAGE_php7-mod-soap=y
-CONFIG_PACKAGE_php7-mod-sockets=y
-CONFIG_PACKAGE_php7-mod-sqlite3=y
-CONFIG_PACKAGE_php7-mod-sysvmsg=y
-CONFIG_PACKAGE_php7-mod-sysvsem=y
-CONFIG_PACKAGE_php7-mod-sysvshm=y
-CONFIG_PACKAGE_php7-mod-tokenizer=y
-CONFIG_PACKAGE_php7-mod-xml=y
-CONFIG_PACKAGE_php7-mod-xmlreader=y
-CONFIG_PACKAGE_php7-mod-xmlwriter=y
-CONFIG_PACKAGE_php7-mod-zip=y
-CONFIG_PACKAGE_php7-pecl-dio=y
-CONFIG_PACKAGE_php7-pecl-http=y
-CONFIG_PACKAGE_php7-pecl-krb5=y
-CONFIG_PACKAGE_php7-pecl-libevent=y
-CONFIG_PACKAGE_php7-pecl-mcrypt=y
-CONFIG_PACKAGE_php7-pecl-propro=y
-CONFIG_PACKAGE_php7-pecl-raphf=y
-CONFIG_PACKAGE_php7-pecl-redis=y
-# CONFIG_PACKAGE_ppp-mod-pppoe is not set
-CONFIG_PACKAGE_redsocks2=y
-# CONFIG_PACKAGE_samba36-server is not set
-CONFIG_PACKAGE_samba4-libs=y
-CONFIG_PACKAGE_samba4-server=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
-CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_sqm-scripts=y
-CONFIG_PACKAGE_tc=y
-CONFIG_PACKAGE_tini=y
-CONFIG_PACKAGE_trojan=y
-CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_tvheadend=y
-CONFIG_PACKAGE_uclibcxx=y
-CONFIG_PACKAGE_udpxy=y
-CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_usbreset=y
-CONFIG_PACKAGE_usbutils=y
-CONFIG_PACKAGE_uuidd=y
-CONFIG_PACKAGE_uw-imap=y
-CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_verysync=y
-CONFIG_PACKAGE_watchcat=y
-CONFIG_PACKAGE_wifischedule=y
-CONFIG_PACKAGE_wifitoggle=y
-CONFIG_PACKAGE_zoneinfo-asia=y
-CONFIG_PACKAGE_zoneinfo-core=y
-CONFIG_PCRE2_JIT_ENABLED=y
-# CONFIG_PER_FEED_REPO is not set
-CONFIG_PHP7_FULLICUDATA=y
-CONFIG_PHP7_LIBXML=y
-CONFIG_PHP7_SYSTEMTZDATA=y
-CONFIG_SAMBA4_SERVER_AVAHI=y
-CONFIG_SAMBA4_SERVER_NETBIOS=y
-CONFIG_SAMBA4_SERVER_VFS=y
-CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
-CONFIG_SQLITE3_FTS3=y
-CONFIG_SQLITE3_FTS4=y
-CONFIG_SQLITE3_FTS5=y
-CONFIG_SQLITE3_JSON1=y
-CONFIG_SQLITE3_RTREE=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
@@ -486,3 +297,270 @@ CONFIG_STRONGSWAN_ROUTING_TABLE="220"
 CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
 # CONFIG_ZEROTIER_ENABLE_DEBUG is not set
 # CONFIG_ZEROTIER_ENABLE_SELFTEST is not set
+CONFIG_PACKAGE_lua-bencode=y
+CONFIG_PACKAGE_lua-sha2=y
+CONFIG_PACKAGE_luasocket=y
+CONFIG_PACKAGE_luci-lib-httpprotoutils=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-netgear=y
+CONFIG_PACKAGE_meshwizard=y
+CONFIG_PACKAGE_mount-utils=y
+CONFIG_PACKAGE_mwan3=y
+CONFIG_PACKAGE_naiveproxy=y
+CONFIG_PACKAGE_nginx=y
+CONFIG_PACKAGE_nginx-ssl=y
+CONFIG_PACKAGE_nginx-ssl-util=y
+CONFIG_PACKAGE_nginx-util=y
+CONFIG_PACKAGE_nspr=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
+CONFIG_PACKAGE_oniguruma=y
+CONFIG_PACKAGE_opensc-utils=y
+CONFIG_PACKAGE_openvpn-easy-rsa=y
+CONFIG_PACKAGE_openvpn-openssl=y
+CONFIG_PACKAGE_p910nd=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_pcsc-tools=y
+CONFIG_PACKAGE_pcscd=y
+
+CONFIG_PACKAGE_php7=y
+CONFIG_PACKAGE_php7-cgi=y
+CONFIG_PACKAGE_php7-cli=y
+CONFIG_PACKAGE_php7-fastcgi=y
+CONFIG_PACKAGE_php7-fpm=y
+CONFIG_PACKAGE_php7-mod-bcmath=y
+CONFIG_PACKAGE_php7-mod-calendar=y
+CONFIG_PACKAGE_php7-mod-ctype=y
+CONFIG_PACKAGE_php7-mod-curl=y
+CONFIG_PACKAGE_php7-mod-dom=y
+CONFIG_PACKAGE_php7-mod-exif=y
+CONFIG_PACKAGE_php7-mod-fileinfo=y
+CONFIG_PACKAGE_php7-mod-filter=y
+CONFIG_PACKAGE_php7-mod-ftp=y
+CONFIG_PACKAGE_php7-mod-gd=y
+CONFIG_PACKAGE_php7-mod-gettext=y
+CONFIG_PACKAGE_php7-mod-gmp=y
+CONFIG_PACKAGE_php7-mod-iconv=y
+CONFIG_PACKAGE_php7-mod-intl=y
+CONFIG_PACKAGE_php7-mod-json=y
+CONFIG_PACKAGE_php7-mod-ldap=y
+CONFIG_PACKAGE_php7-mod-mbstring=y
+CONFIG_PACKAGE_php7-mod-mysqli=y
+CONFIG_PACKAGE_php7-mod-mysqlnd=y
+CONFIG_PACKAGE_php7-mod-opcache=y
+CONFIG_PACKAGE_php7-mod-openssl=y
+CONFIG_PACKAGE_php7-mod-pcntl=y
+CONFIG_PACKAGE_php7-mod-pdo=y
+CONFIG_PACKAGE_php7-mod-pdo-mysql=y
+CONFIG_PACKAGE_php7-mod-pdo-pgsql=y
+CONFIG_PACKAGE_php7-mod-pdo-sqlite=y
+CONFIG_PACKAGE_php7-mod-pgsql=y
+CONFIG_PACKAGE_php7-mod-phar=y
+CONFIG_PACKAGE_php7-mod-session=y
+CONFIG_PACKAGE_php7-mod-shmop=y
+CONFIG_PACKAGE_php7-mod-simplexml=y
+CONFIG_PACKAGE_php7-mod-snmp=y
+CONFIG_PACKAGE_php7-mod-soap=y
+CONFIG_PACKAGE_php7-mod-sockets=y
+CONFIG_PACKAGE_php7-mod-sqlite3=y
+CONFIG_PACKAGE_php7-mod-sysvmsg=y
+CONFIG_PACKAGE_php7-mod-sysvsem=y
+CONFIG_PACKAGE_php7-mod-sysvshm=y
+CONFIG_PACKAGE_php7-mod-tokenizer=y
+CONFIG_PACKAGE_php7-mod-xml=y
+CONFIG_PACKAGE_php7-mod-xmlreader=y
+CONFIG_PACKAGE_php7-mod-xmlwriter=y
+CONFIG_PACKAGE_php7-mod-zip=y
+CONFIG_PACKAGE_php7-pecl-dio=y
+CONFIG_PACKAGE_php7-pecl-http=y
+CONFIG_PACKAGE_php7-pecl-krb5=y
+CONFIG_PACKAGE_php7-pecl-libevent=y
+CONFIG_PACKAGE_php7-pecl-mcrypt=y
+CONFIG_PACKAGE_php7-pecl-propro=y
+CONFIG_PACKAGE_php7-pecl-raphf=y
+CONFIG_PACKAGE_php7-pecl-redis=y
+# CONFIG_PACKAGE_ppp-mod-pppoe is not set
+CONFIG_PACKAGE_redsocks2=y
+# CONFIG_PACKAGE_samba36-server is not set
+CONFIG_PACKAGE_samba4-libs=y
+CONFIG_PACKAGE_samba4-server=y
+CONFIG_PACKAGE_smartmontools=y
+CONFIG_PACKAGE_sqm-scripts=y
+CONFIG_PACKAGE_tc=y
+CONFIG_PACKAGE_tini=y
+
+CONFIG_PACKAGE_ttyd=y
+
+CONFIG_PACKAGE_uclibcxx=y
+CONFIG_PACKAGE_udpxy=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_usbreset=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_uuidd=y
+CONFIG_PACKAGE_uw-imap=y
+CONFIG_PACKAGE_v2ray-plugin=y
+CONFIG_PACKAGE_verysync=y
+CONFIG_PACKAGE_watchcat=y
+CONFIG_PACKAGE_wifischedule=y
+CONFIG_PACKAGE_wifitoggle=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PCRE2_JIT_ENABLED=y
+# CONFIG_PER_FEED_REPO is not set
+CONFIG_PHP7_FULLICUDATA=y
+CONFIG_PHP7_LIBXML=y
+CONFIG_PHP7_SYSTEMTZDATA=y
+CONFIG_SAMBA4_SERVER_AVAHI=y
+CONFIG_SAMBA4_SERVER_NETBIOS=y
+CONFIG_SAMBA4_SERVER_VFS=y
+CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+CONFIG_SQLITE3_FTS3=y
+CONFIG_SQLITE3_FTS4=y
+CONFIG_SQLITE3_FTS5=y
+CONFIG_SQLITE3_JSON1=y
+CONFIG_SQLITE3_RTREE=y
+CONFIG_TARGET_IMAGES_GZIP=y
+# IPv6
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_ipv6helper=y
+# USB support
+CONFIG_PACKAGE_ccid=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
+CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb2-pci=y
+CONFIG_PACKAGE_kmod-usbmon=y
+CONFIG_PACKAGE_libopensc=y
+CONFIG_PACKAGE_libpcsclite=y
+CONFIG_PACKAGE_libusb-1.0=y          
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_kmod-usbmon=y
+CONFIG_PACKAGE_pcsc-tools=y
+CONFIG_PACKAGE_pcscd=y
+CONFIG_PACKAGE_uuid=y
+CONFIG_PACKAGE_libopensc=y
+CONFIG_PACKAGE_opensc-utils
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libusb-1.0=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-ch341=y
+CONFIG_PACKAGE_kmod-usb-serial-ftdi =y
+CONFIG_PACKAGE_kmod-usb-serial-pl2303=y
+CONFIG_PACKAGE_libpcsclite=y
+CONFIG_PACKAGE_pcscd=y
+CONFIG_PACKAGE_ccid=y
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb3=n
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_usbreset=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_opensc-utils=y
+CONFIG_PACKAGE_oscam=y
+CONFIG_PACKAGE_pcsc-tools=y
+CONFIG_PACKAGE_pcscd=y
+CONFIG_PACKAGE_usbreset=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_uuidd=y
+CONFIG_PACKAGE_kmod-macvlan=y
+CONFIG_PACKAGE_kmod-8021q=y
+CONFIG_PACKAGE_kmod-bridge=y
+CONFIG_PACKAGE_igmpproxy=y
+CONFIG_PACKAGE_tcpdump=y          
+# Filesystem
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y          
+# APP
+CONFIG_PACKAGE_luci-app-oscam=y
+CONFIG_PACKAGE_luci-app-kodexplorer=y
+CONFIG_PACKAGE_luci-app-udpxy=y
+CONFIG_PACKAGE_luci-app-filetransfer=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-aliddns=y
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-frps=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
+CONFIG_PACKAGE_luci-app-openvpn=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+ # CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-xlnetacc=y
+CONFIG_PACKAGE_luci-app-sfe=y
+CONFIG_PACKAGE_luci-app-v2ray-server=y
+CONFIG_PACKAGE_luci-app-meshwizard=y
+CONFIG_PACKAGE_openwrt-fullconenat=y
+CONFIG_PACKAGE_luci-app-flowoffload=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_xray-core=y
+CONFIG_PACKAGE_tcping=y          
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_redsocks2=y
+CONFIG_PACKAGE_pdnsd-alt=y
+CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_kcptun-client=y
+# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+CONFIG_PACKAGE_luci-app-aliddns=y
+CONFIG_PACKAGE_luci-app-amule=y
+CONFIG_PACKAGE_luci-app-baidupcs-web=y
+CONFIG_PACKAGE_luci-app-cifs-mount=y
+CONFIG_PACKAGE_luci-app-cifsd=y
+CONFIG_PACKAGE_luci-app-cjdns=y
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y
+CONFIG_PACKAGE_luci-app-dnsforwarder=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
+CONFIG_PACKAGE_luci-app-kodexplorer=y
+CONFIG_PACKAGE_luci-app-meshwizard=y
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+CONFIG_PACKAGE_luci-app-openvpn=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+# CONFIG_PACKAGE_luci-app-samba is not set
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-sfe=y
+CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_Plugin=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-udpxy=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-v2ray-server=y
+CONFIG_PACKAGE_luci-app-verysync=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
+CONFIG_PACKAGE_oscam=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_tvheadend=y
