--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -64,13 +64,10 @@ jobs:
     ##下载kenzok8/openwrt-packages的源代码 和 passwall依赖库kenzok8/small.git。
     - name: Clone openwrt-packages code
       run: |
-          #cd lede/package &&  git clone https://github.com/kenzok8/openwrt-packages.git
-          echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default               
-          mkdir openwrt-packages
-          cd openwrt-packages
+          cd lede/package &&  git clone https://github.com/kenzok8/openwrt-packages.git
+          #echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default              
           git clone https://github.com/LemoFire/luci-app-aliddns.git             
-          echo "src-git OpenWrt-Packages-DVB https://github.com/kob/OpenWrt-Packages-DVB.git" >> ./feeds.conf.default 
-          git clone https://github.com/kob/OpenWrt-Packages-DVB.git
+          git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git
           cd OpenWrt-Packages-DVB
           rm -rf ./feeds/packages/multimedia/tvheadend
          
