--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
           #cd lede/package &&  git clone https://github.com/kenzok8/openwrt-packages.git
           #echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default              
-          cd ledr 
+          cd lede
           git clone https://github.com/fw876/helloworld.git
           git clone https://github.com/LemoFire/luci-app-aliddns.git             
           git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git
