--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -94,8 +94,8 @@ jobs:
       run: |
         #=================================================
         #+++++++++++++++++++++++++++++++++++++++++++++++++
-        
-        
+        cd lede
+        rm -f ./.config*
         cp x64.config ./lede/.config
         chmod +x diy-newifi3.sh
         cd lede
