--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -48,7 +48,7 @@ jobs:
           mysql* \
           php*
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils  libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev python3.6 zlib1g-dev upx-ucl node-uglify antlr3 gperf
+        sudo -E apt-get -yqq install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib openssl pcsc-tools cvs autoconf libccid automake libtool gettext  cmake tar bzip2 gzip patch ncurses-bin flex bison pkg-config wget libssl-dev libudev-dev openssl git libusb-dev libpcsclite-dev subversion dialog opensc ssh gcc g++ dialog make subversion  libccid  libpcsc-perl pcsc-tools pcscd libpcsc-perl pcsc-tools
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
         
@@ -58,14 +58,12 @@ jobs:
         git clone https://github.com/coolsnowwolf/lede lede
         
         ##修改lede目录中的feeds.conf.default文件，把第5行的 # 去掉。
-        cd lede
-        sed -i '5s/#//' feeds.conf.default
+       # cd lede
+       # sed -i '5s/#//' feeds.conf.default
 ##***************************************************************************  
     ##下载kenzok8/openwrt-packages的源代码 和 passwall依赖库kenzok8/small.git。
     - name: Clone openwrt-packages code
-      run: |
-          #cd lede/package &&  git clone https://github.com/kenzok8/openwrt-packages.git
-          #echo "src-git helloworld https://github.com/fw876/helloworld" >> ./feeds.conf.default              
+      run: |                 
           cd lede/package          
           git clone https://github.com/fw876/helloworld.git
           git clone https://github.com/LemoFire/luci-app-aliddns.git             
