--- a/.github/workflows/x641.yml
+++ b/.github/workflows/x641.yml
@@ -93,12 +93,12 @@ jobs:
       run: |
         #=================================================
         #+++++++++++++++++++++++++++++++++++++++++++++++++
-        
+        cd lede
         rm -f ./.config*
-        
+        cd ..
         cp x641.config ./lede/.config
         chmod +x diy-newifi3.sh
-        ../diy-newifi3.sh
+        .diy-newifi3.sh
         
         #++++++++++++++++++++++++++++++++++++++++++++++++
         #=================================================
