--- a/.github/workflows/x641.yml
+++ b/.github/workflows/x641.yml
@@ -95,8 +95,11 @@ jobs:
         #+++++++++++++++++++++++++++++++++++++++++++++++++
         cp x641.config ./lede/.config
         chmod +x diy-newifi3.sh
-        ./diy-newifi3.sh
-        
+        cd lede
+        ../diy-newifi3.sh
+        #++++++++++++++++++++++++++++++++++++++++++++++++
+        #=================================================
+        make defconfig
         #++++++++++++++++++++++++++++++++++++++++++++++++
         #=================================================
         make defconfig
