--- a/.github/workflows/x862.yml
+++ b/.github/workflows/x862.yml
@@ -33,6 +33,7 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        sudo -E apt-get clean
         docker rmi `docker images -q`
         echo "Deleting files, please wait ..."
         sudo rm -rf \
