--- a/newifi3.config
+++ b/newifi3.config
@@ -2,8 +2,20 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
-CONFIG_PACKAGE_adbyby=y
-CONFIG_PACKAGE_amule=y
+# Open source WIFI driver
+CONFIG_PACKAGE_kmod-mt7603=y
+CONFIG_PACKAGE_kmod-mt7603e=n
+CONFIG_PACKAGE_kmod-mt76x2=y
+CONFIG_PACKAGE_kmod-mt76x2e=n
+CONFIG_PACKAGE_hostapd-common=y
+CONFIG_PACKAGE_wpad-openssl=y
+CONFIG_PACKAGE_luci-app-mtwifi=n
+# IPv6
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_ipv6helper=y
+
+# CONFIG_PACKAGE_adbyby=y
+# CONFIG_PACKAGE_amule=y
 CONFIG_PACKAGE_antfs-mount=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_autosamba=y
@@ -38,8 +50,10 @@ CONFIG_PACKAGE_libupnp=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libwxbase=y
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-amule=y
+
+#luci-app
+# CONFIG_PACKAGE_luci-app-adbyby-plus=n
+# CONFIG_PACKAGE_luci-app-amule=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-mwan3=y
@@ -49,6 +63,9 @@ CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-aliddns=y
+CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-amule-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
