--- a/.github/workflows/newifi3.yml
+++ b/.github/workflows/newifi3.yml
@@ -4,7 +4,7 @@
 #=================================================
 
 #=================================================
-name: Build newifi3-20200530
+# name: Build newifi3-20200530
 #=================================================
 
 on: 
