--- a/.github/workflows/x64.yml
+++ b/.github/workflows/x64.yml
@@ -93,11 +93,12 @@ jobs:
         #=================================================
         #+++++++++++++++++++++++++++++++++++++++++++++++++
         cd lede
-        rm -rf ./feeds/packages/multimedia/tvheadend
+        rm -r ./feeds/packages/multimedia/tvheadend
         rm -f ./.config*
         cd ..
         cp x64.config ./lede/.config
         chmod +x diy-newifi3.sh
+        cd lede
         ../diy-newifi3.sh
         #++++++++++++++++++++++++++++++++++++++++++++++++
         #=================================================
