--- a/x64.config
+++ b/x64.config
@@ -462,7 +462,7 @@ CONFIG_PACKAGE_tc=y
 CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_tvheadend=y
+# CONFIG_PACKAGE_tvheadend=y
 CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_udpxy=y
 CONFIG_PACKAGE_unbound-daemon=y
@@ -477,7 +477,7 @@ CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_wifischedule=y
 CONFIG_PACKAGE_wifitoggle=y
 CONFIG_PACKAGE_wireguard-tools=y
-CONFIG_PACKAGE_zerotier=y
+# CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_zoneinfo-asia=y
 CONFIG_PACKAGE_zoneinfo-core=y
 CONFIG_PCRE2_JIT_ENABLED=y
