--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -76,7 +76,7 @@ jobs:
       run: |
        #=================================================
        #+++++++++++++++++++++++++++++++++++++++++++++++++
-        cp -f newifi3.config ./lede/.config
+        cp -f newifi-d2.config ./lede/.config
         chmod +x diy-newifi3.sh
         cd lede
         ../diy-newifi3.sh
