--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -82,6 +82,7 @@ jobs:
     
  
     - name: Download package
+      working-directory: ./openwrt
       run: |
         echo -e "$(nproc) thread build."
         cd lede && make download -j$(nproc)
