--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -104,6 +104,6 @@ jobs:
       uses: actions/upload-artifact@master
       with:
         name: newifi3d2-20200710
-        path: ./lede/bin
+        path: ./openwrt/bin
     
   
