--- a/newifi-d2.config
+++ b/newifi-d2.config
@@ -58,7 +58,8 @@ CONFIG_PACKAGE_kmod-8021q=y
 CONFIG_PACKAGE_kmod-bridge=y
 CONFIG_PACKAGE_igmpproxy=y
 CONFIG_PACKAGE_tcpdump=y
-          
+CONFIG_PACKAGE_tvheadend=y
+CONFIG_PACKAGE_libdvbcsa=y     
 # Filesystem
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
