--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -69,9 +69,10 @@ jobs:
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
-        rm -r ./feeds/packages/multimedia/tvheadend
+        
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+        rm -rf ./feeds/packages/multimedia/tvheadend
 
     #- name: Import external feeds
     #  working-directory: ./openwrt
