--- a/newifi-d2.config
+++ b/newifi-d2.config
@@ -6,7 +6,8 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
 CONFIG_TARGET_IMAGES_GZIP=y
 # IPv6
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_ipv6helper=y       
+CONFIG_PACKAGE_ipv6helper=y
+         
 # USB support
 CONFIG_PACKAGE_ccid=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
@@ -45,7 +46,6 @@ CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_usbreset=y
 CONFIG_PACKAGE_usbutils=y
-CONFIG_PACKAGE_dvb-firmware=y
 CONFIG_PACKAGE_opensc-utils=y
 CONFIG_PACKAGE_oscam=y
 CONFIG_PACKAGE_pcsc-tools=y
@@ -58,12 +58,12 @@ CONFIG_PACKAGE_kmod-8021q=y
 CONFIG_PACKAGE_kmod-bridge=y
 CONFIG_PACKAGE_igmpproxy=y
 CONFIG_PACKAGE_tcpdump=y
-CONFIG_PACKAGE_tvheadend=y
-CONFIG_PACKAGE_libdvbcsa=y     
+          
 # Filesystem
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-fs-ntfs=y        
+CONFIG_PACKAGE_kmod-fs-ntfs=y
+          
 # APP
 # CONFIG_PACKAGE_luci-app-oscam=n
 CONFIG_PACKAGE_luci-app-kodexplorer=y
@@ -94,11 +94,14 @@ CONFIG_PACKAGE_luci-app-v2ray-server=n
 CONFIG_PACKAGE_luci-app-meshwizard=y
 CONFIG_PACKAGE_openwrt-fullconenat=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
-CONFIG_PACKAGE_luci-theme-material=y  
+CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_xray-core=y
+         
 # multual dial
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-app-syncdial=y     
+CONFIG_PACKAGE_luci-app-syncdial=y
+          
 # Open source WIFI driver
 CONFIG_PACKAGE_kmod-mt7603=y
 CONFIG_PACKAGE_kmod-mt7603e=n
