--- a/.github/workflows/newifi-d2.yml
+++ b/.github/workflows/newifi-d2.yml
@@ -80,7 +80,7 @@ jobs:
         git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB
         rm -r ./feeds/packages/multimedia/tvheadend
-    - name: Configuration Customization - Build_x86
+    - name: Configuration Customization - Build_newifi-d2
       env:
         CONFIG_FILE: 'newifi-d2.config'
       run: |
