--- a/jcg-q20.config
+++ b/jcg-q20.config
@@ -1,7 +1,7 @@
 # Device type
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_jcg q20=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_jcg_q20=y
 # Gzip
 CONFIG_TARGET_IMAGES_GZIP=y
 
