--- a/.github/workflows/jcg-q20.yml
+++ b/.github/workflows/jcg-q20.yml
@@ -69,7 +69,6 @@ jobs:
       run: |
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        ./scripts/feeds install -a
     - name: Import external feeds
       working-directory: ./openwrt
       run: |
@@ -77,7 +76,7 @@ jobs:
         # git clone "your_github_link" package/"your_folder_name"      
         git clone https://github.com/zzq12345/luci-app-koolproxy.git package/luci-app-koolproxy
         git clone https://github.com/zzq12345/OpenWrt-Packages-DVB.git package/OpenWrt-Packages-DVB
-        rm -r ./feeds/packages/multimedia/tvheadend
+        rm -rf ./feeds/packages/multimedia/tvheadend
     - name: Configuration Customization - Build_newifi-d2
       env:
         CONFIG_FILE: 'jcg-q20.config'
@@ -104,5 +103,5 @@ jobs:
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: jcg_q20-20200710
+        name: jcg_q20-20210617
         path: ./openwrt/bin
